[tool.poetry]
name = "formsite-util"
version = "2.0.3"
description = "Python library and CLI tool for interacing with the FormSite API"
authors = ["Jakub Strnad <jakub.strnad@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/strny0/formsite-utility/"
keywords = ["formsite", "form", "api", "download", "export"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
packages = [{ include = "formsite_util" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/strny0/formsite-utility/issues"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
requests = "^2.27.1"
pandas = "^1.3"
pytz = "^2021.3"
tqdm = "^4.62.3"
colorama = "^0.4.4"
tables = { version = "^3.0.0", optional = true }
openpyxl = { version = "^3.0.0", optional = true }
pyarrow = { version = "^7.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getform = 'formsite_util.cli:main'
